# other/controllers/Event.js
@@ -58,7 +58,21 @@ module.exports.getAll = function getAll(req, res, next){
   var offset = req.swagger.params['offset'].value;
   var limit = req.swagger.params['limit'].value;
   
-  Event.getAll(id, offset, limit)
+  Event.getAll(offset, limit)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+}
+
+module.exports.findBySeminar = function findBySeminar(req, res, next){
+  var id = req.swagger.params['id'].value;
+  var offset = req.swagger.params['offset'].value;
+  var limit = req.swagger.params['limit'].value;
+  
+  Event.findBySeminar(id, offset, limit)
     .then(function (response) {
       utils.writeJson(res, response);
     })
